# LifeboatProject

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/logic/: Additional.cpp  Additional.h  AllCharacters.cpp  AllCharacters.h  CMakeLists.txt  Card.cpp  Card.h  Character.cpp  Character.h  Goods.h  Item.cpp  Item.h  Navigation.h  Weapon.cpp  Weapon.h  action.cpp  action.h  action_factory.h  additional.cpp  additional.h  all_cards.cpp  all_cards.h  all_characters.cpp  all_characters.h  card.cpp  card.h  character.cpp  character.h  game.cpp  game.h  game_state.cpp  game_state.h  goods.cpp  goods.h  item.cpp  item.h  listener.cpp  listener.h  main.cpp  navigation.cpp  (+7 more)
src/multiplayer/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
src/multiplayer/bd_factorization/: CMakeLists.txt  client.cc  factorization.proto  server.cc
src/multiplayer/helloworld/: CMakeLists.txt  helloworld.proto
src/multiplayer/lifeboat/: CMakeLists.txt  action_factory.cpp  action_factory.h  game_impl.cpp  game_impl.h  lifeboat.proto  main.cpp  player.cc  player.cpp  player.h  player_main.cpp  server.cpp  server.h
src/ui/: CMakeLists.txt
src/ui/lifeboat/: CMakeLists.txt  board.cpp  board.h  board.ui  cards.json  clickablelable.cpp  clickablelable.h  find_game.h  find_game.ui  images.qrc  lifeboat.cpp  lifeboat.h  lifeboat.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp
src/ui/lifeboat/resources/: resources.qrc
src/util/: json.hpp
